@@ -1,5 +1,16 @@
 2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c, procman.c: save the disk list state
+
+	* proctable.c: begin to properly handle when a parent node is
+	removed but the children arn't
+
+2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
+
+	* favorties: port the hidden processes dialog to GtkDialog
+
+2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
+
 	* memmaps.c: save and restore the memmaps tree state. Also
 	port the dialog to GtkDialog
 
